# novel-workbench

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MANUAL_ACTIONS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CODESPACES.md  COMMUNITY.md  DISTRIBUTION.md  EDITOR_WORKFLOWS.md  EVALUATION.md  FAQ.md  FIRST_PR.md  GITHUB_LAUNCH.md  LAUNCH_KIT.md  MAINTAINER_GUIDE.md  OUTPUT_EXAMPLES.md  PACKAGING.md  POSITIONING.md  PROJECT_SCHEMA.md  PYPI_PUBLISHING.md  RELEASE_TEMPLATE.md  SHELL_COMPLETION.md  SHOWCASE.md  USE_CASES.md
examples/: quickstart.md
scripts/: build_pages_demo.py  check.py  demo.py  launch_audit.py  release_check.py  verify_github_metadata.py  verify_public_links.py
src/novel_workbench/: __init__.py  cli.py  models.py  storage.py
tests/: test_cli.py  test_storage.py
