[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-workbench"
version = "0.1.0"
description = "Local command line workspace for planning, drafting, and exporting novels."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Novel Workbench Maintainers" }]
license = "MIT"
keywords = ["writing", "novel", "markdown", "cli", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
novel = "novel_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
