[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-workbench"
version = "0.1.1"
description = "Local command line workspace for planning, drafting, and exporting novels."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Novel Workbench Maintainers" }]
license = "MIT"
keywords = [
  "ai-handoff",
  "author-tools",
  "cli",
  "creative-writing",
  "fiction",
  "github-pages",
  "local-first",
  "markdown",
  "novel",
  "static-site",
  "writing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Artistic Software",
  "Topic :: Office/Business",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xinjian0101/novel-workbench"
Source = "https://github.com/xinjian0101/novel-workbench"
Documentation = "https://github.com/xinjian0101/novel-workbench/blob/master/docs/CLI_REFERENCE.md"
"Live Demo" = "https://xinjian0101.github.io/novel-workbench/"
Issues = "https://github.com/xinjian0101/novel-workbench/issues"
Discussions = "https://github.com/xinjian0101/novel-workbench/discussions"
Release = "https://github.com/xinjian0101/novel-workbench/releases/tag/v0.1.1"
Changelog = "https://github.com/xinjian0101/novel-workbench/blob/master/CHANGELOG.md"
Evaluation = "https://github.com/xinjian0101/novel-workbench/blob/master/docs/EVALUATION.md"
"Use Cases" = "https://github.com/xinjian0101/novel-workbench/blob/master/docs/USE_CASES.md"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "setuptools>=68",
]

[project.scripts]
novel = "novel_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
